--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "rxjs": "~6.4.0",
     "socket.io": "latest",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "ngx-socket-io": "latest"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.23",
