--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "e2e": "ng e2e",
     "postinstall": "ng build --output-path dist"
   },
+  "engines": {
+    "node": "10.16.3",
+    "npm": "6.9.0"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
